--- a/Views/Armes/Delete.cshtml
+++ b/Views/Armes/Delete.cshtml
@@ -1,15 +1,25 @@
 ﻿@model BO.Arme
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Page de suppression";
 }
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Arme</h4>
     <hr />
+    <h3>Voulez vous vraiment supprimer cette arme ?</h3>
+
+    @if (ViewBag.Samourais != null)
+    {
+    <h4>Voici les Samouraïs qui utilisent cette arme : </h4>
+
+    foreach (var samourai in ViewBag.Samourais)
+    {
+    <h5>@samourai</h5>
+    }
+    }
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Nom)
@@ -29,7 +39,8 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
