--- a/Views/Samourais/Create.cshtml
+++ b/Views/Samourais/Create.cshtml
@@ -41,11 +41,11 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Samourai.ArtMartial, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.Samourai.ArtMartiaux, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
 
-            @Html.DropDownListFor(model => model.IdSelectedAM, Model.ArtsMartiaux, new { htmlAttributes = new { @class = "control-label col-md-2" } })
-            @Html.ValidationMessageFor(model => model.Samourai.ArtMartial, "", new { @class = "text-danger" })
+            @Html.ListBoxFor(model => model.IdSelectedAM, Model.ArtsMartiaux, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Samourai.ArtMartiaux, "", new { @class = "text-danger" })
         </div>
     </div>
 
