--- a/Views/Samourais/Edit.cshtml
+++ b/Views/Samourais/Edit.cshtml
@@ -40,8 +40,16 @@
             @Html.ValidationMessageFor(model => model.Samourai.Arme, "", new { @class = "text-danger" })
         </div>
         <div class="form-group">
+            @Html.LabelFor(model => model.Samourai.ArtMartial, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+
+                @Html.ListBoxFor(model => model.IdSelectedAM, Model.ArtsMartiaux, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Samourai.ArtMartial, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Modifier" class="btn btn-default" />
             </div>
         </div>
     </div>
