--- a/Views/Samourais/Index.cshtml
+++ b/Views/Samourais/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Liste des combattants inscrits au Dojo</h2>
 
 <p>
     @Html.ActionLink("Ajouter un nouveau combattant", "Create")
@@ -20,34 +20,51 @@
         <th>
             @Html.DisplayNameFor(model => model.Arme)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ArtMartiaux)
+        </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Force)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nom)
-        </td>
-        <td>
-            @if (item.Arme == null)
-            {
-                @ViewBag.Message
+<tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.Force)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Nom)
+    </td>
+    <td>
+        @if (item.Arme == null)
+        {
+            @ViewBag.Message
 
-            }
-            @if (item.Arme != null)
+        }
+        @if (item.Arme != null)
+        {
+            @Html.DisplayFor(modelItem => item.Arme.Nom)
+        }
+    </td>
+    <td>
+        @if (item.ArtMartiaux == null)
+        {
+            @ViewBag.Message2
+
+        }
+        @if (item.ArtMartiaux != null)
+        {
+            foreach (var artmartial in item.ArtMartiaux)
             {
-                @Html.DisplayFor(modelItem => item.Arme.Nom)
+            @Html.DisplayFor(i => artmartial.Nom)
             }
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
+        }
+    </td>
+    <td>
+        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+        @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+    </td>
+</tr>
 }
 
 </table>
