--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -22,8 +22,9 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Accueil", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Samouraï", "Index", "Samourais")</li>
+                    <li>@Html.ActionLink("Samouraïs", "Index", "Samourais")</li>
                     <li>@Html.ActionLink("Armes", "Index", "Armes")</li>
+                    <li>@Html.ActionLink("Arts Martiaux", "Index", "ArtMartials")</li>
                 </ul>
             </div>
         </div>
