--- a/Views/Samourais/Create.cshtml
+++ b/Views/Samourais/Create.cshtml
@@ -44,7 +44,7 @@
         @Html.LabelFor(model => model.Samourai.ArtMartiaux, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
 
-            @Html.ListBoxFor(model => model.IdSelectedAM, Model.ArtsMartiaux, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ListBoxFor(model => model.IdSelectedAM, Model.ArtsMartiaux.Select(x => new SelectListItem { Text = x.Nom, Value = x.Id.ToString() }), new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Samourai.ArtMartiaux, "", new { @class = "text-danger" })
         </div>
     </div>
