--- a/Views/Samourais/Edit.cshtml
+++ b/Views/Samourais/Edit.cshtml
@@ -39,21 +39,23 @@
             @Html.DropDownListFor(model => model.IdSelectedArme, Model.Armes, new { htmlAttributes = new { @class = "control-label col-md-2" } })
             @Html.ValidationMessageFor(model => model.Samourai.Arme, "", new { @class = "text-danger" })
         </div>
+    </div>
+    <div>
         <div class="form-group">
-            @Html.LabelFor(model => model.Samourai.ArtMartial, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Samourai.ArtMartiaux, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
 
-                @Html.ListBoxFor(model => model.IdSelectedAM, Model.ArtsMartiaux, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Samourai.ArtMartial, "", new { @class = "text-danger" })
+            @Html.ListBoxFor(model => model.IdSelectedAM, Model.ArtsMartiaux.Select(x => new SelectListItem { Text = x.Nom, Value = x.Id.ToString() }), new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Samourai.ArtMartiaux, "", new { @class = "text-danger" })
             </div>
         </div>
+    </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Modifier" class="btn btn-default" />
             </div>
         </div>
     </div>
-  </div>
     }
 
     <div>
